--- a/app/elements/common/description-list/description-list.html
+++ b/app/elements/common/description-list/description-list.html
@@ -1,6 +1,8 @@
+<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+
 <dom-module id="description-list">
 	<template>
-		<style is="custom-style">
+		<style is="custom-style" include="iron-flex">
 			.description-list {
 				@apply(--layout-vertical);
 			}
