--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body unresolved class="fullbleed layout vertical fullHeight">
+<body unresolved class="fullbleed fullHeight">
 	<span id="browser-sync-binding"></span>
 	<app-element id="app"></app-element>
 	<!-- build:js scripts/util.js -->
