--- a/app/elements/common/login/login-page-password/login-page-password.html
+++ b/app/elements/common/login/login-page-password/login-page-password.html
@@ -4,10 +4,10 @@
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/paper-input/all-imports.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
-<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id="login-page-password">
-	<style type="text/css">
+	<style type="text/css" include="iron-flex">
 iron-icon.huge {
 	--iron-icon-height: 50%;
 	--iron-icon-width: 50%;
