--- a/app/elements/common/register/register-page.html
+++ b/app/elements/common/register/register-page.html
@@ -6,10 +6,10 @@
 <link rel="import" href="/bower_components/paper-input/all-imports.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id="register-page">
-	<style type="text/css">
+	<style type="text/css" include="iron-flex">
 :host {
 	/* layout properties for the host element */
 	@apply(--layout-vertical);
@@ -58,6 +58,10 @@ paper-material > div > paper-button {
 
 	margin: 0 !important;
 	margin-top: 12px !important;
+}
+
+span {
+	@apply(--layout-flex);
 }
 	</style>
 	<template>
