--- a/app/elements/company/challenge-template/challenge-template-list.html
+++ b/app/elements/company/challenge-template/challenge-template-list.html
@@ -1,18 +1,20 @@
 <link rel="import" href="challenge-template-card.html">
 <link rel="import" href="/elements/common/services/challenge-template-service.html">
-<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id="challenge-template-list">
-	<style>
+	<style include="iron-flex">
 		.challenge-template-list {
 			padding: 10px;
+			@apply(--layout-horizontal);
+			@apply(--layout-wrap);
 		}
 	</style>
 	<template>
 		<challenge-template-service id="challengeTemplateService" challenge-templates="{{challengeTemplates}}"></challenge-template-service>
 
-		<div class="horizontal layout wrap challenge-template-list ">
+		<div class="challenge-template-list ">
 			<template is="dom-repeat" items="{{challengeTemplates}}">
 				<challenge-template-card challenge-template="{{item}}"></challenge-template-card>
 			</template>
