--- a/app/elements/common/services/task-service.html
+++ b/app/elements/common/services/task-service.html
@@ -93,7 +93,7 @@
 			},
 			getAll: function(){
 				if(!util.organization()){
-					return page.redirect('/');
+					return page('/');
 				}
 				this.app.startLoading();
 				this.$.getMultiTasks.url = util.build('/tasks?organization=' + util.organization().id);
