--- a/app/elements/company/challenge/challenge-list.html
+++ b/app/elements/company/challenge/challenge-list.html
@@ -71,7 +71,7 @@
 				}
 			},
 			_viewDetail: function(e){
-				page.redirect('/challenges/' + e.model.__data__.item.id);
+				page('/challenges/' + e.model.__data__.item.id);
 			}
 		});
 	</script>
