--- a/app/elements/company/task/task-form.html
+++ b/app/elements/company/task/task-form.html
@@ -132,7 +132,7 @@
 				this.$.taskService.save(this.task);
 			},
 			_savedTaskChanged: function(task){
-				page.redirect('/tasks/' + task);
+				page('/tasks/' + task);
 			}
 		});
 	</script>
