--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -111,11 +111,17 @@ window.addEventListener('WebComponentsReady', function() {
 	});
 
 	page('/task/create', function(){
-		app.route = 'task-create';
 		Polymer.Base.importHref('/elements/company/task/task-form.html', function(){
 			app.swapContent(document.createElement('task-form'));
 		});
 	});
+
+	page('/template/create', function(){
+		Polymer.Base.importHref('/elements/company/task/template/template-form.html', function(){
+			app.swapContent(document.createElement('template-form'));
+		});
+	});
+
 
 	page('/task/edit/:id', function(ctx){
 		Polymer.Base.importHref('/elements/company/task/task-form.html', function(){
